App.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,6 +83,22 @@
     </div>
   </div>
   <!--================= CAROUSEL =================-->
+  <br><br><br>
+  <h3 style = "text-align: center">Latest Events</h3>
+  <br>
+
+  <div class = "container-fluid" id = "event-container">
+    <div class = "col-md-4"><img src = "assets/images/event1.jpg" id = "event1"></div>
+    <div class = "col-md-4"><img src = "assets/images/event2.jpg" id = "event2"></div>
+    <div class = "col-md-4"><img src = "assets/images/event3.jpg" id = "event3"></div>
+
+    <div class = "col-md-4"><img src = "assets/images/event4.jpg" id = "event4"></div>
+    <div class = "col-md-8"><img src = "assets/images/event5.jpg" id = "event5"></div>
+
+    <div class = "col-md-4"><img src = "assets/images/event6.jpg" id = "event6"></div>
+    <div class = "col-md-4"><img src = "assets/images/event7.jpg" id = "event7"></div>
+    <div class = "col-md-4"><img src = "assets/images/event8.jpg" id = "event8"></div>
+  </div>
 
 </body>
 </html>
