--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,23 +65,7 @@
   <!--================= LOGIN MODAL =================-->
 
   <!--================= CAROUSEL =================-->
-  <div id = "myCarousel" class = "carousel slide">
-    <div class = "carousel-inner" role = "listbox">
-
-      <div class = "item active">
-        <img src = "assets/images/carousel2.jpg"/>
-      </div>
-
-      <div class = "item">
-        <img src = "assets/images/carousel1.jpg"/>
-      </div>
-
-      <div class = "item">
-        <img src = "assets/images/carousel3.jpg"/>
-      </div>
-
-    </div>
-  </div>
+  <img src = "assets/images/carousel2.jpg" width = "100%" height = "500px">
   <!--================= CAROUSEL =================-->
   <br><br><br>
   <h3 style = "text-align: center">Latest Events</h3>
