--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
         <ul class = "nav navbar-nav navbar-right">
           <li><a href = "#"><span class = "glyphicon glyphicon-user"></span> Create Event</a></li>
-          <li><a href = "#" data-toggle = "modal" data-target = "#enter"><span class = "glyphicon glyphicon-log-in"></span> Login</a>
+          <li><a href = "#" data-toggle = "modal" data-target = "#login"><span class = "glyphicon glyphicon-log-in"></span> Login</a>
           </li>
         </ul>
 
@@ -42,7 +42,7 @@
   <!--================= NAVBAR =================-->
 
   <!--================= LOGIN MODAL =================-->
-  <div class = "modal fade" id = "enter" role = "dialog">
+  <div class = "modal fade" id = "login" role = "dialog">
     <div class = "modal-dialog">
       <div class = "modal-content">
 
@@ -68,6 +68,8 @@
   <img src = "assets/images/carousel2.jpg" width = "100%" height = "500px">
   <!--================= CAROUSEL =================-->
   <br><br><br>
+
+  <!--================= EVENTS =================-->
   <h3 style = "text-align: center">Latest Events</h3>
   <br>
 
@@ -83,6 +85,15 @@
     <div class = "col-md-4"><img src = "assets/images/event7.jpg" id = "event7"></div>
     <div class = "col-md-4"><img src = "assets/images/event8.jpg" id = "event8"></div>
   </div>
+  <!--================= EVENTS =================-->
+
+  <!--================= FOOTER =================-->
+  <div class = "footer">
+    <div class = "well" style = "text-align: center">
+      &copy; EVENTIT 2018
+    </div>
+  </div>
+  <!--================= FOOTER =================-->  
 
 </body>
 </html>
