--- a/src/assets/css/myStyle.css
+++ b/src/assets/css/myStyle.css
@@ -2,6 +2,7 @@
 }
 #event1:hover,#event2:hover,#event3:hover,#event4:hover,#event5:hover,#event6:hover,#event7:hover,#event8:hover,#event9:hover{
 	opacity: 0.5;
+	cursor: pointer;
 }
 #event1, #event2, #event3{
 	width: 400px;
