--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class = "animated fadeIn">
 <head>
-  <title>EventIT - Home</title>
+  <title>EventIT - Profile</title>
   <meta charset = "utf-8">
   <meta name = "viewport" content = "width=device-width, initial-scale=1">
   <link rel = "stylesheet" type = "text/css" href = "assets/css/bootstrap.css">
