--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<header>
-  <app-navbar></app-navbar>
-</header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+<header><app-navbar></app-navbar></header><br>
+<main><router-outlet></router-outlet></main>
+  
