--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,8 +1,67 @@
-<div class="container">
-  <div class="row mt-4">
-    <div class="col-lg-12">
-      <div class="card">
+<div *ngIf="events?.length > 0;else noEvents">
+
+  <ul *ngFor="let event of events" class="collection">
+
+    <li class="collection-item" (dblclick)="deleteTask($event, event)">
+
+      <strong>{{ event.title }}</strong> : {{ event.description }} 
+
+      <a href="#" class="secondary-content">
+
+        <i (click)="deleteTask($event, event)" class="fa fa-trash"></i>
+
+        <i (click)="editTask($event, event)" class="fa fa-pencil"></i>
+
+      </a>
+
+      <div *ngIf="editState && eventToEdit.id === event.id">
+
+        <form (ngSubmit)="updateTask(event)">
+
+          <div class="row">
+
+            <div class="input-field col s6">
+
+              <input 
+
+                type="text" name="title"
+
+                placeholder="Edit Title" [(ngModel)]="event.title">
+
+            </div>
+
+            <div class="input-field col s6">
+
+                <input 
+
+                  type="text" name="description"
+
+                  placeholder="Edit Description" [(ngModel)]="task.description">
+
+            </div>
+
+            <input type="submit" class="btn" value="Update Task">
+
+            <button class="btn red" (click)="deleteTask($event, event)">Delete Event</button>
+
+          </div>
+
+        </form>
+
       </div>
-    </div>
-  </div>
+
+
+
+    </li>
+
+  </ul>
+
 </div>
+
+
+
+<ng-template #noTasks>
+
+  <h5>There is not Tasks yet.</h5>
+
+</ng-template>
