--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="events">Events</a>
+        <a class="nav-link" routerLink="/events">Events</a>
       </li>
     </ul>
       <form class="form-inline my-2 my-lg-0">
